Fixed review title spacing

--- a/level5-D/lesson-20/main.scss
+++ b/level5-D/lesson-20/main.scss
@@ -236,7 +236,11 @@ body {
 }
 @media screen and (max-width: 360px) {
   .html-lesson-wrapper {
-   
+    .test-content{
+      p{
+        padding-top: 2px;
+      }
+    }
     .lesson-number {
       margin-top: 7.2%;
     }
